[project]
name = "emmett_crypto"
repository = "https://github.com/emmett-framework/crypto"

[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"

[tool.maturin]
sdist-include = [
    "Cargo.lock",
    "emmett_crypto/*.py",
    "tests/*.py"
]
strip = true

[package.metadata.maturin]
name = "emmett_crypto._crypto"
requires-python = ">=3.7"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Topic :: Security :: Cryptography"
]
